--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,8 +26,8 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#0ea5e9",
-  "background_color": "#ffffff",
+  "theme_color": "#3b82f6",
+  "background_color": "#f8fafc",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en"
